Switch to JDK 17 (GraalVM) glueon/android support